--- a/config.json
+++ b/config.json
@@ -7,13 +7,14 @@
         "database" : "eBarangayConnectDB"
     },
     "secret": "RSmpo2AB20u0qYdfX1En5w==",
-    "emailFrom": "info@node-mysql-signup-verification-api.com",
+    "emailFrom": "info@node-ebarangayconnect@gmail.com",
     "smtpOptions" : {
-        "host": "smtp.ethereal.email",
+        "service": "Gmail",
+        "host": "smtp.gmail.com",
         "port": 587,
         "auth": {
-            "user": "cora.kling36@ethereal.email",
-            "pass": "K9G44zqHM5As2x2dD3"
+            "user": "ebarangayconnect@gmail.com",
+            "pass": "trkkydmhcgafvoyd"
         }
     }
 }
